// Vitest Snapshot v1

exports[`components/content/SongList.vue > snapshot test > renders loading state 1`] = `
<div
  class="b-table"
>
  <div
    style="display: none;"
  >
    
    <span
      data-id="1"
    >
      Name
    </span>
    <span
      data-id="2"
    >
      Artist
    </span>
    <span
      data-id="3"
    >
      BPM
    </span>
    
    
    
  </div>
  <!--v-if-->
  <!--v-if-->
  <div
    class="table-wrapper"
  >
    <table
      class="table is-striped is-narrow is-empty"
      tabindex="false"
    >
      <!--v-if-->
      <thead>
        <tr>
          <!--v-if-->
          <!--v-if-->
          
          <th
            class=""
            draggable="false"
          >
            <span>
              Name 
              <span
                class="th-wrap sort-icon"
                style="display: none;"
              >
                <span
                  class="icon is-small"
                >
                  <i
                    class="mdi mdi-arrow-up"
                  />
                </span>
              </span>
            </span>
          </th>
          <th
            class=""
            draggable="false"
          >
            <span>
              Artist 
              <span
                class="th-wrap sort-icon"
                style="display: none;"
              >
                <span
                  class="icon is-small"
                >
                  <i
                    class="mdi mdi-arrow-up"
                  />
                </span>
              </span>
            </span>
          </th>
          <th
            class=""
            draggable="false"
          >
            <span>
              BPM 
              <span
                class="th-wrap sort-icon"
                style="display: none;"
              >
                <span
                  class="icon is-small"
                >
                  <i
                    class="mdi mdi-arrow-up"
                  />
                </span>
              </span>
            </span>
          </th>
          
          <!--v-if-->
        </tr>
        <!--v-if-->
        <!--v-if-->
      </thead>
      <tbody>
        
        
        <tr>
          <td
            colspan="3"
          >
            
            <section
              class="section"
            >
              <div
                class="content has-text-grey has-text-centered"
              >
                <p>
                  Nothing here.
                </p>
              </div>
            </section>
            
          </td>
        </tr>
      </tbody>
      <!--v-if-->
    </table>
    
    <transition-stub>
      <div
        class="o-load loading"
      >
        <div
          class="o-load__overlay loading-overlay"
        />
        
        <span
          class="icon is-spin is-medium o-load__icon icon"
        >
          <i
            class="mdi mdi-loading mdi-36px"
          />
        </span>
        
      </div>
    </transition-stub>
    
  </div>
  <!--v-if-->
</div>
`;

exports[`components/content/SongList.vue > snapshot test > renders song info 1`] = `
<div
  class="b-table"
>
  <div
    style="display: none;"
  >
    
    <span
      data-id="1"
    >
      Name
    </span>
    <span
      data-id="2"
    >
      Artist
    </span>
    <span
      data-id="3"
    >
      BPM
    </span>
    
    <span
      data-id="4"
    >
      SINGLE
    </span>
    <span
      data-id="5"
    >
      DOUBLE
    </span>
    <span
      data-id="6"
    >
      COUPLE
    </span>
    
    
  </div>
  <!--v-if-->
  <!--v-if-->
  <div
    class="table-wrapper"
  >
    <table
      class="table is-striped is-narrow"
      tabindex="false"
    >
      <!--v-if-->
      <thead>
        <tr>
          <!--v-if-->
          <!--v-if-->
          
          <th
            class=""
            draggable="false"
          >
            <span>
              Name 
              <span
                class="th-wrap sort-icon"
                style="display: none;"
              >
                <span
                  class="icon is-small"
                >
                  <i
                    class="mdi mdi-arrow-up"
                  />
                </span>
              </span>
            </span>
          </th>
          <th
            class=""
            draggable="false"
          >
            <span>
              Artist 
              <span
                class="th-wrap sort-icon"
                style="display: none;"
              >
                <span
                  class="icon is-small"
                >
                  <i
                    class="mdi mdi-arrow-up"
                  />
                </span>
              </span>
            </span>
          </th>
          <th
            class=""
            draggable="false"
          >
            <span>
              BPM 
              <span
                class="th-wrap sort-icon"
                style="display: none;"
              >
                <span
                  class="icon is-small"
                >
                  <i
                    class="mdi mdi-arrow-up"
                  />
                </span>
              </span>
            </span>
          </th>
          <th
            class=""
            draggable="false"
          >
            <span>
              SINGLE 
              <span
                class="th-wrap sort-icon"
                style="display: none;"
              >
                <span
                  class="icon is-small"
                >
                  <i
                    class="mdi mdi-arrow-up"
                  />
                </span>
              </span>
            </span>
          </th>
          <th
            class=""
            draggable="false"
          >
            <span>
              DOUBLE 
              <span
                class="th-wrap sort-icon"
                style="display: none;"
              >
                <span
                  class="icon is-small"
                >
                  <i
                    class="mdi mdi-arrow-up"
                  />
                </span>
              </span>
            </span>
          </th>
          <th
            class=""
            draggable="false"
          >
            <span>
              COUPLE 
              <span
                class="th-wrap sort-icon"
                style="display: none;"
              >
                <span
                  class="icon is-small"
                >
                  <i
                    class="mdi mdi-arrow-up"
                  />
                </span>
              </span>
            </span>
          </th>
          
          <!--v-if-->
        </tr>
        <!--v-if-->
        <!--v-if-->
      </thead>
      <tbody>
        
        
        <tr
          class=""
          draggable="false"
        >
          <!--v-if-->
          <!--v-if-->
          
          <td
            class=""
            data-label="Name"
          >
            <a>
              butterfly
            </a>
          </td>
          <td
            class=""
            data-label="Artist"
          >
            <span>
              smile. dk
            </span>
          </td>
          <td
            class=""
            data-label="BPM"
          >
            135
          </td>
          <td
            class=""
            data-label="SINGLE"
          >
            <div
              class="tags has-addons"
            >
              
              <span
                class="tag is-basic"
                title="NORMAL"
              >
                3
              </span>
              <span
                class="tag is-basic"
                title="BASIC"
              >
                3
              </span>
              <span
                class="tag is-difficult"
                title="ANOTHER"
              >
                4
              </span>
              <span
                class="tag is-expert"
                title="MANIAC"
              >
                6
              </span>
              
            </div>
          </td>
          <td
            class=""
            data-label="DOUBLE"
          >
            <div
              class="tags has-addons"
            >
              
              <span
                class="tag is-basic"
                title="BASIC"
              >
                4
              </span>
              <span
                class="tag is-difficult"
                title="ANOTHER"
              >
                6
              </span>
              
            </div>
          </td>
          <td
            class=""
            data-label="COUPLE"
          >
            <div
              class="tags has-addons"
            >
              
              <span
                class="tag is-basic"
                title="NORMAL"
              >
                3
              </span>
              <span
                class="tag is-basic"
                title="BASIC"
              >
                3
              </span>
              <span
                class="tag is-difficult"
                title="ANOTHER"
              >
                4
              </span>
              <span
                class="tag is-expert"
                title="MANIAC"
              >
                6
              </span>
              
            </div>
          </td>
          
          <!--v-if-->
        </tr>
        <transition-stub>
          <!--v-if-->
        </transition-stub>
        <!--v-if-->
        
        
        <tr
          class=""
          draggable="false"
        >
          <!--v-if-->
          <!--v-if-->
          
          <td
            class=""
            data-label="Name"
          >
            <a>
              PARANOiA
            </a>
          </td>
          <td
            class=""
            data-label="Artist"
          >
            <span>
              180
            </span>
          </td>
          <td
            class=""
            data-label="BPM"
          >
            180
          </td>
          <td
            class=""
            data-label="SINGLE"
          >
            <div
              class="tags has-addons"
            >
              
              <span
                class="tag is-basic"
                title="BASIC"
              >
                6
              </span>
              <span
                class="tag is-difficult"
                title="ANOTHER"
              >
                7
              </span>
              <span
                class="tag is-expert"
                title="MANIAC"
              >
                8
              </span>
              
            </div>
          </td>
          <td
            class=""
            data-label="DOUBLE"
          >
            <div
              class="tags has-addons"
            >
              
              <span
                class="tag is-basic"
                title="BASIC"
              >
                7
              </span>
              <span
                class="tag is-difficult"
                title="ANOTHER"
              >
                8
              </span>
              
            </div>
          </td>
          <td
            class=""
            data-label="COUPLE"
          >
            <div
              class="tags has-addons"
            >
              
              <span
                class="tag is-basic"
                title="BASIC"
              >
                6
              </span>
              <span
                class="tag is-difficult"
                title="ANOTHER"
              >
                7
              </span>
              <span
                class="tag is-expert"
                title="MANIAC"
              >
                8
              </span>
              
            </div>
          </td>
          
          <!--v-if-->
        </tr>
        <transition-stub>
          <!--v-if-->
        </transition-stub>
        <!--v-if-->
        
        
        <!--v-if-->
      </tbody>
      <!--v-if-->
    </table>
    
    <transition-stub>
      <!--v-if-->
    </transition-stub>
    
  </div>
  <!--v-if-->
</div>
`;
